Feature/pic 3584 result from overview (#880)
* 3584: Wip, refactor case summary controller

* 3584: Moved link / unlink into action button

* 3584: Fix tests for refactor

* 3584: Only show button when in progress

* 3584: Only show if in progress, added simple flash service

* 3584: Show banner with flash message

* 3584: Disable if not assigned

* 3584: Remove old template code

* 3584: Added new mock data, revert changes to old

* 3584: Fix linting

* 3584: Fix unit test

* 3584: Remove commented code

* 3584: Updated call to getOutcomeTypesList

* 3584: Fix data for int test

* 3584: Add more mock data

* 3584: Update test for multiple assigns

* 3584: Update wiremock files

* Update docker-compose.yml

* Update userMe.json

* WIremock fun

* Update default.json

---------

Co-authored-by: Johny Farrar <me@johnyfarrar.co.uk>

--- a/server/views/partials/case-details.njk
+++ b/server/views/partials/case-details.njk
@@ -60,7 +60,9 @@
         breach: breach,
         awaitingPsr: awaitingPsr,
         hideUnlinkButton: hideUnlinkButton,
-        manualMatch: data.manualMatch
+        manualMatch: data.manualMatch,
+        actionButtonItems: data.actionButtonItems,
+        assignedToCurrentUser: data.assignedToCurrentUser
     }) }}
 
 {% endblock %}
