--- a/server/views/components/key-details-bar/template.njk
+++ b/server/views/components/key-details-bar/template.njk
@@ -1,3 +1,5 @@
+{%- from "moj/components/button-menu/macro.njk" import mojButtonMenu -%}
+
 <section class="pac-key-details-bar" aria-label="Key details">
     <div class="pac-key-details-bar__key-details pac-key-details-bar-flex">
 
@@ -39,24 +41,13 @@
         </div>
 
         {% if not params.manualMatch %}
-        {% if params.probationStatus == 'No record' %}
-            <div class="pac-key-details-bar-flex__child pac-key-details-bar-flex__child__right govuk-!-margin-right-0">
-                <form method="get" action="/{{ params.courtCode }}/case/{{ params.caseId }}/hearing/{{ params.hearingId }}/match/defendant/{{ params.defendantId }}/manual">
-                    <button class="govuk-button govuk-button--secondary pac-key-details-bar__button"
-                            data-module="govuk-button" type="submit">Link NDelius record
-                    </button>
+            {% if params.actionButtonItems %}
+                <form method="post">
+                    {{ mojButtonMenu({
+                    items: params.actionButtonItems
+                    }) }}
                 </form>
-            </div>
-        {% elif params.crn | length and not params.hideUnlinkButton %}
-            <div class="pac-key-details-bar-flex__child pac-key-details-bar-flex__child__right govuk-!-margin-right-0">
-                <form method="get"
-                      action="/{{ params.courtCode }}/case/{{ params.caseId }}/hearing/{{ params.hearingId }}/match/defendant/{{ params.defendantId }}/unlink/{{ params.crn }}">
-                    <button class="govuk-button govuk-button--secondary pac-key-details-bar__button"
-                            data-module="govuk-button" type="submit">Unlink NDelius record
-                    </button>
-                </form>
-            </div>
-        {% endif %}
+            {% endif %}
         {% endif %}
 
     </div>
