Update modal to pass defendant ID to service

--- a/server/views/court-case-progress-hearing-outcome-edit-modal.njk
+++ b/server/views/court-case-progress-hearing-outcome-edit-modal.njk
@@ -15,6 +15,7 @@
 
             <form method="post" action="summary/edit-hearing-outcome">
                 <input type="hidden" name="targetHearingId" value=""/>
+                <input type="hidden" name="targetDefendantId" value=""/>
                 <div class="modal-body">
                     <p class="govuk-body-m" id="edit-hearing-outcome-modal-label">
                         This case is in progress on the outcomes page, which means an admin might already be resulting it based on the original outcome type you selected
