--- a/server/views/court-case-progress-hearing-outcome-modal.njk
+++ b/server/views/court-case-progress-hearing-outcome-modal.njk
@@ -9,6 +9,7 @@
 
             <form method="post" action="summary/add-hearing-outcome">
                 <input type="hidden" name="targetHearingId" value=""/>
+                <input type="hidden" name="targetDefendantId" value=""/>
                 <div class="modal-body">
                         {{ govukSelect({
                             id: 'addHearingOutcomeType',
