PIC-3710: remove text

--- a/server/views/court-case-progress.njk
+++ b/server/views/court-case-progress.njk
@@ -20,7 +20,7 @@
                             <div class="govuk-grid-column-full">
                                 <div class="govuk-grid-column-full govuk-notification-banner--success govuk-notification-banner__header govuk-!-padding-left-3 govuk-!-padding-top-2 govuk-!-padding-bottom-2 app-summary-card__banner">
                                     <div>
-                                        <span class="govuk-notification-banner__title govuk-body govuk-!-font-size-16">{{ hearing.hearingOutcome.hearingOutcomeDescription }} asdf </span>
+                                        <span class="govuk-notification-banner__title govuk-body govuk-!-font-size-16">{{ hearing.hearingOutcome.hearingOutcomeDescription }}</span>
                                         <span class="govuk-notification-banner__title govuk-body govuk-!-font-size-16 hearing-outcome-display-date govuk-!-padding-left-2">Sent to admin on {{ hearing.hearingOutcome.outcomeDate | hearingNoteTimeFormat }}</span>
                                     </div>
                                     {% if hearing.hearingOutcome.state !== 'RESULTED' and hearing.hearingOutcome.state !== '' %}
