PIC-3721 update styling

--- a/public/src/stylesheets/app/_case-progress-card.scss
+++ b/public/src/stylesheets/app/_case-progress-card.scss
@@ -110,3 +110,16 @@
     font-weight: unset!important;
   }
 }
+
+.hearing-note-warning {
+
+  &-container {
+    display: flex;
+  }
+
+  &-warning {
+    display: flex;
+    align-items: center;
+  }
+
+}
