refactor: remove the user fetch now that oauth issue with not passing the name is resolved

--- a/server/views/partials/header.html
+++ b/server/views/partials/header.html
@@ -33,7 +33,7 @@
 
                 <ul class="moj-header__navigation-list">
                     <li class="moj-header__navigation-item">
-                        {{ user.displayName }}
+                        {{ user.name }}
                     </li>
                     {% if not hideCourtLink %}
                     <li class="moj-header__navigation-item">
