PIC-3722: Fix broken html

--- a/server/views/case-summary.njk
+++ b/server/views/case-summary.njk
@@ -222,7 +222,7 @@
                                 </h2>
                             </div>
                             <div id="accordion-{{ params.caseId }}-content-{{ loop.index }}"
-                                 class="govuk-accordion__section-content"
+                                 class="govuk-accordion__section-content">
                                 <p class="govuk-body govuk-!-margin-bottom-0">{{ offence.offenceSummary }}</p>
                                 <p class="govuk-caption-m govuk-!-margin-top-3">{{ offence.act }}</p>
                             </div>
