--- a/server/views/case-summary.njk
+++ b/server/views/case-summary.njk
@@ -177,7 +177,7 @@
                 </div>
             </dl>
 
-            {% if features.caseDefendantDocuments %}
+            {% if features.hearingOutcomesEnabled %}
                 <section id="section-files" class="govuk-!-margin-bottom-4">
                     <h2 class="govuk-heading-m govuk-!-margin-top-9">
                         Case documents
