--- a/public/src/stylesheets/app/_case-comments-custom.scss
+++ b/public/src/stylesheets/app/_case-comments-custom.scss
@@ -22,3 +22,17 @@
   height: 220px;
   width: 90%;
 }
+
+.case-comment-warning {
+
+  &-container {
+    display: flex;
+    margin-left: 15px;
+  }
+
+  &-icon {
+    display: flex;
+    align-items: center;
+  }
+
+}
