Fix: Copy and paste text

--- a/server/views/court-case-comments.njk
+++ b/server/views/court-case-comments.njk
@@ -70,7 +70,7 @@
                                             </div>
                                             <strong class="govuk-warning-text__text">
                                                 <span class="govuk-visually-hidden">Warning</span>
-                                                This note was added to a case with more than one defendant. Delete the note if it is not relevant to this defendant.
+                                                This comment was added to a case with more than one defendant. Delete the comment if it is not relevant to this defendant.
                                             </strong>
                                         </div>
                                     {% endif %}
