Pic 3746 - add legacy comment warning (#916)
* Tidy: Remove old values

* 🧪 Add Failing tests

* 🧪 Failing test data

* ✅ Pass tests

* 💄Update styles

* Fix: Style and test

* Fix: Copy and paste text

--- a/public/src/stylesheets/app/_case-comments-custom.scss
+++ b/public/src/stylesheets/app/_case-comments-custom.scss
@@ -22,3 +22,18 @@
   height: 220px;
   width: 90%;
 }
+
+.case-comment-warning {
+
+  &-container {
+    display: flex;
+    margin-left: 15px;
+    margin-bottom: 0;
+  }
+
+  &-icon {
+    display: flex;
+    align-items: center;
+  }
+
+}
