PIC-3744: Updated wiremock data / hearing outcome pages for on hold

--- a/server/views/outcomes/casesInProgress.njk
+++ b/server/views/outcomes/casesInProgress.njk
@@ -89,6 +89,12 @@
     count: params.casesInProgressCount
   },
   {
+    title: 'On hold',
+    a11yTitle: 'View case outcomes on hold',
+    link: '/' + params.courtCode + '/outcomes/on-hold',
+    count: params.casesOnHoldCount
+  },
+  {
     title: 'Resulted cases',
     a11yTitle: 'View resulted cases',
     link: '/' + params.courtCode + '/outcomes/resulted-cases'
