--- a/server/views/outcomes/casesOnHold.njk
+++ b/server/views/outcomes/casesOnHold.njk
@@ -92,7 +92,7 @@
     a11yTitle: 'View case outcomes on hold',
     link: '/' + params.courtCode + '/outcomes/on-hold',
     current: true,
-    count: params.casesInProgressCount
+    count: params.casesOnHoldCount
   },
   {
     title: 'Resulted cases',
