--- a/server/views/outcomes/casesToResult.njk
+++ b/server/views/outcomes/casesToResult.njk
@@ -106,7 +106,7 @@
     title: 'On hold',
     a11yTitle: 'View case outcomes on hold',
     link: '/' + params.courtCode + '/outcomes/on-hold',
-    count: params.casesInProgressCount
+    count: params.casesOnHoldCount
   },
   {
     title: 'Resulted cases',
