PIC-3759: Stop filters persisting (#919)
* PIC-3759: Stop filters persisting

* PIC-3759: Fix tests

* PIC-3759: Fix tests

* PIC-3759: Updated filtersApplied logic

* PIC-3759: Force checks

* PIC-3759: Fix int tests

* PIC-3759: Update int tests

--- a/server/views/case-list.njk
+++ b/server/views/case-list.njk
@@ -3,6 +3,8 @@
 
 {%- from "components/tabs/macro.njk" import pacTabs -%}
 
+
+
 {% block javascripts %}
     {% if displayFilters %}
         <script type="text/javascript" src="/javascripts/filter-component-{{ appVersion }}.min.js"></script>
@@ -137,7 +139,7 @@
 {% for i in range(startNum, endNum + 1) -%}
     {{ pageItems.push({
         text: i,
-        href: '/' + params.courtCode + '/cases/' + params.date + '?page=' + i,
+        href: params.baseUrl + 'page=' + i,
         selected: currentPage === i
     }) }}
 {%- endfor %}
@@ -147,7 +149,7 @@
 {% else %}
     {% set previousLink = {
         text: 'Previous',
-        href: '/' + params.courtCode + '/cases/' + params.date + '?page=' + (currentPage - 1)
+        href:  params.baseUrl + 'page=' + (currentPage - 1)
     } %}
 {% endif %}
 
@@ -156,7 +158,7 @@
 {% else %}
     {% set nextLink = {
         text: 'Next',
-        href: '/' + params.courtCode + '/cases/' + params.date + '?page=' + (currentPage + 1)
+        href: params.baseUrl + 'page=' + (currentPage + 1)
     } %}
 {% endif %}
 
@@ -308,6 +310,7 @@
             {% set listTabs = listTabs.splice(0,1) %}
         {% endif %}
     {% endif -%}
+{{params.filtersApplied | safe}}
 
     {% if displayFilters %}
         {%- from "components/filter/macro.njk" import pacFilter -%}
